--- a/apikey.ini
+++ b/apikey.ini
@@ -1,6 +1,6 @@
 [OpenAI]
 introductioon = the api key does not ''
-OPENAI_API_KEYS = [your_key_0, ]
+OPENAI_API_KEYS = [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, ]
 [Gitee]
 api = your_gitee_api
 owner = your_gitee_name
